@@ -1,3 +1,13 @@
+2006-05-02 Kurt Maute <Kurt@Maute.us>
+	* libplanner/mrp-file-module.c
+	* libplanner/mrp-storage-module-factory.c
+	* src/planner-cell-renderer-popup.c
+	* src/planner-gantt-row.c
+	* src/planner-plugin-loader.c
+	* src/planner-resource-view.c
+	* src/planner-window.c
+	Fix for compiling with gcc 4.1 - type punned pointers that break strict aliasing rules
+
 2006-04-29 Kurt Maute <Kurt@Maute.us>
 	* src/planner-gantt-view.c
 	* src/planner-usage-view.c
